# bbvw2-redux-wiki

./: .gitignore  404.html  README.md  index.html  mkdocs.yml  pyproject.toml  requirements.txt  sitemap.xml
.claude/: settings.local.json
changes/evolution_changes/: index.html
changes/item_changes/: index.html
changes/move_changes/: index.html
changes/trade_changes/: index.html
changes/trainer_changes/: index.html
changes/type_changes/: index.html
changes/wild_area_changes/: index.html
data/documentation/: Changelog.txt  Credits.txt  Evolution Changes.txt  Gift Pokemon.txt  Important NPCs.txt  Important Nuzlocke Information.txt  Important and General Information.txt  Item Changes.txt  Known Bugs and Hardware Information.txt  Legendary Locations.txt  Move Changes.txt  Patching Guide.txt  Pokemon Changes.txt  Reddit Post.txt  Redux FAQ.txt  Trade Changes.txt  Trainer Changes.txt  Type Changes.txt  Useful Action Replay Codes.txt  Wild Area Changes.txt
docs/: index.md
docs/changes/: evolution_changes.md  item_changes.md  move_changes.md  pokemon_changes.md  trade_changes.md  trainer_changes.md  type_changes.md  wild_area_changes.md
docs/getting_started/: changelog.md  hardware_info.md  patching_guide.md
docs/locations/: locations.md
docs/pokedex/: abilities.md  items.md  moves.md  pokemon.md
docs/reference/: gift_pokemon.md  legendary_locations.md
docs/stylesheets/: extra.css
getting_started/changelog/: index.html
getting_started/credits/: index.html
src/: __init__.py  config.json  main.py
src/data/: __init__.py  (+2 more)
stylesheets/: extra.css
(+4189 files in other folders)
